# nanoresearch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  diagrams.yml
data/users/example/: profile.json
docs/: _config.yml  api.md  architecture.md  getting-started.md  index.md  paper-mapping.md  sdpo.md  security.md  testing.md  ui-design.md
docs/assets/diagrams/: mermaid.config.json  pipeline-simple.mmd  pipeline.mmd  sequence.mmd  system.mmd
src/nanoresearch/: __init__.py
src/nanoresearch/agents/: __init__.py  _util.py  artefacts.py  blueprint.py  prompts.py  sandbox.py  stage1_ideation.py  stage1_planning.py  stage2_analysis.py  stage2_coding.py  stage3_writing.py
src/nanoresearch/api/: __init__.py  app.py  intent.py  narrator.py  run_manager.py
src/nanoresearch/cli/: main.py
src/nanoresearch/config/: __init__.py
src/nanoresearch/literature/: __init__.py  client.py  models.py
src/nanoresearch/llm/: __init__.py  azure_foundry.py  base.py  local_qwen.py  router.py
src/nanoresearch/logging/: __init__.py
src/nanoresearch/orchestrator/: __init__.py  feedback.py  orchestrator.py  stage.py  trajectory.py
src/nanoresearch/planner/: __init__.py  adapters.py  planner.py  sdpo.py
src/nanoresearch/schemas/: __init__.py
src/nanoresearch/stores/: __init__.py  distill.py  memory_store.py  profile_store.py  retrieval.py  skill_bank.py
tests/: conftest.py  test_api.py  test_azure_smoke.py  test_config.py  test_distill.py  test_literature.py  test_local_qwen_smoke.py  test_manifest.py  test_orchestrator.py  test_router.py  test_schemas_and_scoring.py  test_sdpo.py  test_stage1.py  test_stage2_stage3.py  test_stores.py
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ChatPanel.tsx  StatusPanel.tsx
ui/src/hooks/: useRunStream.ts
ui/src/lib/: api.ts  intent.ts  session.ts
